<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/client_id_edit_text"
    android:layout_width="220dp"
    android:layout_height="50dp"
    android:ems="10"
    android:inputType="text"
    android:hint="@string/client_id_edit_text"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.058" />

    <EditText
    android:id="@+id/client_name_edit_text"
    android:layout_width="220dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="text"
    android:hint="@string/client_name_edit_text"
    app:layout_constraintEnd_toEndOf="@+id/client_id_edit_text"
    app:layout_constraintStart_toStartOf="@+id/client_id_edit_text"
    app:layout_constraintTop_toBottomOf="@+id/client_id_edit_text" />

    <EditText
    android:id="@+id/prd_name_edit_text"
    android:layout_width="220dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="text"
    android:hint="@string/prd_name_edit_text"
    app:layout_constraintEnd_toEndOf="@+id/client_name_edit_text"
    app:layout_constraintStart_toStartOf="@+id/client_name_edit_text"
    app:layout_constraintTop_toBottomOf="@+id/client_name_edit_text" />

    <EditText
    android:id="@+id/prd_price_edit_text"
    android:layout_width="220dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="text"
    android:hint="@string/prd_price_edit_text"
    app:layout_constraintEnd_toEndOf="@+id/prd_name_edit_text"
    app:layout_constraintStart_toStartOf="@+id/prd_name_edit_text"
    app:layout_constraintTop_toBottomOf="@+id/prd_name_edit_text" />

    <EditText
    android:id="@+id/prd_qty_edit_text"
    android:layout_width="220dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:inputType="text"
    android:hint="@string/prd_qty_edit_text"
    app:layout_constraintEnd_toEndOf="@+id/prd_price_edit_text"
    app:layout_constraintStart_toStartOf="@+id/prd_price_edit_text"
    app:layout_constraintTop_toBottomOf="@+id/prd_price_edit_text" />

    <FrameLayout
    android:id="@+id/frameLayout"
    android:layout_width="400dp"
    android:layout_height="340dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_billing_text_view"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:text="@string/total_billing_text_view"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="404dp" />

        <TextView
            android:id="@+id/billing_info_text_view"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/billing_info_text_view"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="471dp" />

        <Button
            android:id="@+id/total_input_billing_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_input_billing_button" />

        <Button
            android:id="@+id/total_record_billing_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/total_record_billing_button" />

        <Button
            android:id="@+id/billing_details_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/billing_details_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_billing_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/prev_billing_button" />

        <Button
            android:id="@+id/next_billing_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/next_billing_button" />
    </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>