<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/client_id_update_edit_text"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/client_id_update_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/client_id_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prd_qty_update_edit_text"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prd_qty_update_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/prd_price_update_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/prd_price_update_edit_text" />

    <EditText
        android:id="@+id/prd_name_update_edit_text"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prd_name_update_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/client_name_update_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/client_name_update_edit_text" />

    <TextView
        android:id="@+id/prd_name_text_view"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/prd_name_text_view"
        app:layout_constraintEnd_toEndOf="@+id/client_name_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/client_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/client_name_text_view" />

    <TextView
        android:id="@+id/client_id_text_view"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/client_id_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/prd_price_text_view"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/prd_price_text_view"
        app:layout_constraintEnd_toEndOf="@+id/prd_name_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prd_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/prd_name_text_view" />

    <EditText
        android:id="@+id/prd_price_update_edit_text"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/prd_price_update_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/prd_name_update_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/prd_name_update_edit_text" />

    <TextView
        android:id="@+id/prd_qty_text_view"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/prd_qty_text_view"
        app:layout_constraintEnd_toEndOf="@+id/prd_price_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prd_price_text_view"
        app:layout_constraintTop_toBottomOf="@+id/prd_price_text_view" />

    <TextView
        android:id="@+id/client_name_text_view"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/client_name_text_view"
        app:layout_constraintEnd_toStartOf="@+id/client_name_update_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/client_id_text_view"
        app:layout_constraintTop_toBottomOf="@+id/client_id_text_view" />

    <EditText
        android:id="@+id/client_name_update_edit_text"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/client_name_update_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/client_id_update_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/client_id_update_edit_text" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/billing_update_button"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/billing_update_button"/>

        <Button
            android:id="@+id/billing_delete_button"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/billing_delete_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/billing_search_button"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/billing_search_button"/>

        <Button
            android:id="@+id/billing_view_button"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/billing_view_button"/>


    </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>